<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="20dp"
        android:text="@string/your_inventory"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TableLayout
        android:id="@+id/inventoryTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:collapseColumns=""
        android:orientation="vertical"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TableRow
            android:id="@+id/header_row"
            android:background="@drawable/value_cell_border"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/header_quantity"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:background="@drawable/value_cell_border"
                android:text="@string/quantity"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:background="@drawable/value_cell_border"
                android:text="@string/item"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/header_delete"
                android:layout_height="wrap_content"
                android:layout_width="86dp"
                android:layout_column="2"
                android:background="@drawable/value_cell_border"
                android:text="Delete"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:layout_marginTop="585dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Add\nItem"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>